# transport-cost-model

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/sample/: depots.csv  suburbs.csv  suburbs_with_distances.csv
docs/: methodology.md
notebooks/: 01_geocode_suburbs.ipynb  02_calculate_distances.ipynb  03_build_cost_model.ipynb
src/transport_cost_model/: __init__.py  cli.py  cost_model.py  distances.py  geocode.py
